--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "normalize.css": "^8.0.1"
   }
 }
